src/cli/renderer/snapshots/thndrs_core__renderer__transcript__tests__transcript_tool_ok_highlighted.snap
---
source: src/cli/renderer/transcript/tests.rs
assertion_line: 27
expression: contents
---
│                                                                                   # [bg=#171928]=                                                                                
│   ✓ run_shell [ok]  program: cargo build                                          # [bg=#171928]=   [fg=#37f499 bg=#171928]=✓  [fg=#ebfafa bg=#171928 b]=run_shell [fg=#37f499 bg=#171928]= [ok] [bg=#171928]=   [fg=#abb4da bg=#171928]=program: cargo build [bg=#171928]=                                       [bg=#171928]=  
│      │    Compiling thndrs v0.1.0                                                 # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=    [fg=#8fa1b3 bg=#171928]=Compiling [fg=#c0c5ce bg=#171928]= thndrs v0.1.0 [bg=#171928]=                                              [bg=#171928]=  
│      │     Finished `dev` profile [unoptimized + debuginfo] target(s)             # [bg=#171928]=   [fg=#3b4261 bg=#171928]=   │  [fg=#c0c5ce bg=#171928]=     [fg=#8fa1b3 bg=#171928]=Finished [fg=#c0c5ce bg=#171928]=  [fg=#c0c5ce bg=#171928]=` [fg=#8fa1b3 bg=#171928]=dev [fg=#c0c5ce bg=#171928]=` [fg=#c0c5ce bg=#171928]= profile  [fg=#b48ead bg=#171928]=[ [fg=#c0c5ce bg=#171928]=unoptimized + debuginfo [fg=#b48ead bg=#171928]=] [fg=#c0c5ce bg=#171928]= target(s [fg=#c0c5ce bg=#171928]=) [bg=#171928]=          [bg=#171928]=
